# Neo

./: .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  NEO_MANUAL.md  PLAN.md  README.md  __init__.py  eslint.config.js  install.sh  install.ts  neo  neo.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh  setup_wizard.py  tsconfig.json  vitest.config.ts
.github/workflows/: test.yml
core/: __init__.py  brain.py  vox.py
data/system_docs/: neo_architecture.md
deploy/: neo-guardian.service
memory/: __init__.py
neo_core/: config.py  features.py  logging_config.py  main.py  oauth.py  validation.py
neo_core/api/: __init__.py  middleware.py  routes.py  schemas.py  server.py
neo_core/brain/: __init__.py  core.py  execution.py  llm.py  prompts.py  self_patcher.py
neo_core/cli/: __init__.py  __main__.py  chat.py  history.py  setup.py  status.py
neo_core/core/: __init__.py  auto_tuner.py  brain.py  daemon.py  guardian.py  heartbeat.py  memory_agent.py  persona.py  registry.py  resilience.py  vox.py
neo_core/infra/: __init__.py  daemon.py  guardian.py  heartbeat.py  registry.py  resilience.py
neo_core/integrations/: __init__.py  telegram.py
neo_core/memory/: __init__.py  agent.py  consolidator.py  context.py  conversation.py  learning.py  migrations.py  persona.py  store.py  task_registry.py  working_memory.py
neo_core/providers/: __init__.py  anthropic_provider.py  base.py  bootstrap.py  gemini_provider.py  groq_provider.py  hardware.py  ollama_provider.py  registry.py  router.py
neo_core/security/: __init__.py  sanitizer.py  vault.py
neo_core/teams/: __init__.py  factory.py  worker.py
neo_core/tools/: __init__.py  base_tools.py  plugin_loader.py  tool_generator.py
neo_core/vox/: __init__.py  interface.py
src/: index.ts  server.ts
src/cli/: index.ts  vps-setup.ts  wizard.ts
src/core/: base-agent.ts  (+6 more)
teams/: __init__.py
tests/: conftest.py  memory.test.ts  models.test.ts  test_auto_tuner.py  test_cli.py  test_core_registry.py  test_features.py  test_integration_e2e.py  test_oauth.py  test_plugin_system.py  test_self_patcher.py  test_stage10_guardian.py  test_stage11_hardening.py  test_stage12_persistence.py  test_stage13_api.py  test_stage14_providers.py  test_stage15_stabilization.py  test_stage16_security.py  test_stage17_daemon.py  test_stage18_telegram.py  test_stage1_core.py  test_stage2_memory.py  test_stage3_orchestration.py  test_stage5_resilience.py  test_stage6_providers.py  test_stage7_optimizations.py  test_stage8_heartbeat.py  test_stage9_persona.py  test_tool_generator.py  test_validation.py  test_working_memory.py  token-manager.test.ts  web-search.test.ts
(+75 files in other folders)
