[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-core"
version = "1.2.0"
description = "Neo Core — Écosystème IA Multi-Agents Autonome"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.3",
    "chromadb>=0.5,<1.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "ddgs>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.25",
    "psutil>=6.0",
]

[project.optional-dependencies]
providers = [
    "groq>=0.4",
    "google-generativeai>=0.5",
    "ollama>=0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
]

[project.scripts]
neo = "neo_core.cli:main"

[tool.setuptools.packages.find]
include = ["neo_core*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
