[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-core"
version = "0.8.2"
description = "Neo Core — Écosystème IA Multi-Agents Autonome"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3,<0.5",
    "langchain-anthropic>=0.3,<0.5",
    "langchain-community>=0.3,<0.5",
    "chromadb>=0.5,<1.0",
    "rich>=13.0,<14.0",
    "python-dotenv>=1.0,<2.0",
    "ddgs>=6.0,<8.0",
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.32,<1.0",
    "httpx>=0.25,<1.0",
    "psutil>=6.0,<7.0",
    "cryptography>=42.0,<45.0",
]

[project.optional-dependencies]
providers = [
    "groq>=0.4",
    "google-generativeai>=0.5",
    "ollama>=0.1",
]
telegram = [
    "python-telegram-bot>=21.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
]

[project.scripts]
neo = "neo_core.cli:main"

[tool.setuptools.packages.find]
include = ["neo_core*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
